[package]
name = "viker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"]}
reqwest = { version = "0.11.23", features = ["json"] }
regex = "1.10.3"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.111"
